--- a/reactive/webflux/src/main/resources/public/index.html
+++ b/reactive/webflux/src/main/resources/public/index.html
@@ -8,25 +8,33 @@
 <title>Real-Time BTC Price Trend</title>
 
 <link rel="stylesheet" type="text/css"
-	href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+	href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
+	integrity="sha512-8bHTC73gkZ7rZ7vpqUQThUDhqcNFyYi2xgDgPDHc+GXVGHXq+xPjynxIopALmOPqzo9JZj0k6OqqewdGO3EsrQ=="
+	crossorigin="anonymous">
 
-<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+	integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+	crossorigin="anonymous"></script>
+
 <script
-	src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+	src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"
+	integrity="sha512-dqw6X88iGgZlTsONxZK9ePmJEFrmHwpuMrsUChjAw1mRUhUITE5QU9pkcSox+ynfLhL15Sv2al5A0LVyDCmtUw=="
+	crossorigin="anonymous"></script>
+
 <script type="text/javascript"
 	src="https://www.gstatic.com/charts/loader.js"></script>
 
-<script>
+<script type="text/javascript">
 	var ws = null;
 	var url = 'ws://' + window.location.hostname + ':' + window.location.port
-			+ '/ws/event-emitter';
+			+ '/ws/price';
 
 	var chartData = [];
 
 	function connect() {
 		ws = new WebSocket(url);
 		ws.onopen = function() {
-			setStatus('Online');
+			isOnline(true);
 			ws.send('Start');
 		};
 
@@ -39,21 +47,22 @@
 		};
 	}
 
-	function setStatus(status) {
+	function isOnline(online) {
+		updateLabel();
 		let statusElem = document.getElementById('status');
 		statusElem.style.color = 'white';
-		if(status === 'Online') {
+		if (online === true) {
 			statusElem.style.backgroundColor = '#21BA47';
+			statusElem.innerText = 'Online';
+		} else {
+			statusElem.style.backgroundColor = '#db2828';
+			statusElem.innerText = 'Offline';
 		}
-		else {
-			statusElem.style.backgroundColor = '#db2828';			
-		}
-		statusElem.innerText = status;
 	}
 
 	function disconnect() {
 		if (ws != null) {
-			setStatus('Offline');
+			isOnline(false);
 			ws.close();
 			ws = null;
 		}
@@ -69,6 +78,13 @@
 				+ seconds.toString().padStart(2, '0');
 
 		return timeStr;
+	}
+
+	function updateLabel() {
+		let labelElem = document.getElementById('subheader');
+		$.get( "/info/currpair", function( data ) {
+			labelElem.innerText = data;
+		});				
 	}
 
 	function update(message) {
@@ -88,7 +104,7 @@
 
 		var data = new google.visualization.DataTable();
 		data.addColumn('string', 'Time');
-		data.addColumn('number', 'BTC');
+		data.addColumn('number', 'Price');
 
 		data.addRows(chartData);
 
@@ -117,7 +133,7 @@
 	});
 
 	$(document).ready(function() {
-		setStatus('Offline');
+		isOnline(false);
 	});
 </script>
 </head>
@@ -135,7 +151,7 @@
 		<div class="ui inverted teal segment">
 			<h2 class="ui huge header">
 				Price Trend
-				<div class="sub header">BTC USD</div>
+				<div class="sub header" id="subheader"></div>
 			</h2>
 		</div>
 		<div class="ui segment">
